--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
         <button class="operador" value="igual">=</button>
       </div>
     </div>
+    <h3>Calculadora creada por maxiivan.dev</h3>
   </body>
 </html>
